# relaytv

./: .env.defaults  AGENTS.md  CHANGELOG.md  README.md  docker-compose.release.yml  docker-compose.yml  install.sh  pyproject.toml  release-please-config.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
app/: Dockerfile
app/relaytv_app/: container_entrypoint.py  main.py  overlay_app.py  player.py  qt_shell_app.py  resolver.py  routes.py  state.py  x11_overlay.py  ytdlp_format_policy.py
app/relaytv_app/routes/: __init__.py  app_info.py  assets.py  capabilities.py  devices.py  health.py  jellyfin.py  playback.py  queue.py  settings.py  snapshots.py  status.py  ui.py  uploads.py
app/relaytv_app/static/ui/: app.css  app.js
docs/: API.md  ARCHITECTURE_PHASE_1_ROADMAP.md  ARCHITECTURE_PHASE_1_ROUTE_INVENTORY.md  ARCHITECTURE_REVIEW.md  INSTALL.md  JELLYFIN_OPERATIONS.md  NATIVE_RUNTIME_OPERATIONS.md  README.md  RELEASE.md
scripts/: install.sh
tests/: test_capability_routes.py  test_jellyfin_routes.py  test_playback_routes.py  test_queue_history_routes.py  test_route_inventory.py  test_settings_routes.py  test_smoke.py  test_upload_routes.py
