[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaytv"
version = "0.3.0"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
  "yt-dlp>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.4",
]
qt = [
  "PySide6>=6.7",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "native: native Qt product-default coverage",
  "legacy: compatibility / deprecated runtime coverage",
]

[tool.ruff]
line-length = 100

target-version = "py312"
